# EvickaStudio

./: .env.example  .pre-commit-config.yaml  DOCS.md  README.md  generate_refresh_token.py  pyproject.toml  requirements-dev.txt  requirements.txt  spotify_update.py
.github/workflows/: lint_and_test.yml  update_readme.yml
tests/: test_spotify_update.py
