[project]
name = "evickastudio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "mypy>=1.4.1",
    "pre-commit>=4.2.0",
    "pytest>=7.3.1",
    "python-dotenv>=0.21.0",
    "requests>=2.25.1",
    "ruff>=0.12.7",
    "spotipy>=2.22.0",
    "types-requests>=2.32.0.20250515",
]

[tool.black]
line-length = 88
target-version = ['py36']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["B", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/test_spotify_update.py" = ["E402"]
